kubernetes/local.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-lazztechhub-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: local-lazztechhub
  template:
    metadata:
      labels:
        app: local-lazztechhub
    spec:
      containers:
        - name: local-lazztechhub
          image: registry.internal.lazz.tech/lazztechhub-service:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "750m"
          ports:
          - containerPort: 8080
          volumeMounts:
          - mountPath: /app/data
            name: lazztech-data
          imagePullPolicy: Always
      volumes:
      - name: lazztech-data
        hostPath:
          path: data
---
apiVersion: v1
kind: Service
metadata:
  name: local-lazztechhub-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30000
    name: tcp
  selector:
    app: local-lazztechhub
