kubernetes/dev-lazztechhub.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-lazztechhub-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-lazztechhub
  template:
    metadata:
      labels:
        app: dev-lazztechhub
    spec:
      containers:
        - name: dev-lazztechhub
          image: registry.internal.lazz.tech/dev-lazztechhub-service
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: dev-lazztechhub-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: tcp
  selector:
    app: dev-lazztechhub
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dev-lazztechhub-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - '*.internal.lazz.tech'
  rules:
  - host: dev-lazztechhub.internal.lazz.tech
    http:
      paths:
      - backend:
          serviceName: dev-lazztechhub-service
          servicePort: 80
