kubernetes/dev.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-lazztechhub-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-lazztechhub
  template:
    metadata:
      labels:
        app: dev-lazztechhub
    spec:
      containers:
        - name: dev-lazztechhub
          image: registry.internal.lazz.tech/lazztechhub-service:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "750m"
          ports:
          - containerPort: 8080
          volumeMounts:
          - mountPath: /app/data
            name: lazztech-data
          imagePullPolicy: Always
      volumes:
      - name: lazztech-data
        persistentVolumeClaim:
          claimName: dev-lazztechhub-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: dev-lazztechhub-service
  labels:
    app: dev-lazztechhub
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: dev-lazztechhub
---
apiVersion: v1
kind: Service
metadata:
  name: dev-lazztechhub-db-service
  labels:
    app: dev-lazztechhub
spec:
  ports:
  - port: 5432
    targetPort: 5432
    name: tcp
  selector:
    app: dev-lazztechhub-db
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dev-lazztechhub-lazztech-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: lazztech-acme-crt-secret
      hosts:
        - '*.lazz.tech'
  rules:
  - host: dev-lazztechhub.lazz.tech
    http:
      paths:
      - backend:
          serviceName: dev-lazztechhub-service
          servicePort: 80
