kubernetes/prod.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lazztechhub-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lazztechhub
  template:
    metadata:
      labels:
        app: lazztechhub
    spec:
      containers:
        - name: lazztechhub
          image: registry.internal.lazz.tech/lazztechhub-service
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "750m"
          ports:
          - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: lazztechhub-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: tcp
  selector:
    app: lazztechhub
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lazztechhub-lazztech-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: lazztech-acme-crt-secret
      hosts:
        - '*.lazz.tech'
  rules:
  - host: lazztechhub.lazz.tech
    http:
      paths:
      - backend:
          serviceName: lazztechhub-service
          servicePort: 80
