kubernetes/stage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stage-lazztechhub-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stage-lazztechhub
  template:
    metadata:
      labels:
        app: stage-lazztechhub
    spec:
      containers:
        - name: stage-lazztechhub
          image: registry.internal.lazz.tech/lazztechhub-service
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "750m"
          ports:
          - containerPort: 8080
          imagePullPolicy: Always
        - name: stage-lazztechhub-db
          image: postgres
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 5432
          volumeMounts:
          - mountPath: /var/lib/postgresql
            name: postgres-data
          imagePullPolicy: IfNotPresent
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: stage-lazztechhub-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: stage-lazztechhub-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: tcp
  selector:
    app: stage-lazztechhub
---
apiVersion: v1
kind: Service
metadata:
  name: stage-lazztechhub-db-service
  labels:
    app: stage-lazztechhub
spec:
  ports:
  - port: 5432
    targetPort: 5432
    name: tcp
  selector:
    app: stage-lazztechhub-db
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stage-lazztechhub-lazztech-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: lazztech-acme-crt-secret
      hosts:
        - '*.lazz.tech'
  rules:
  - host: stage-lazztechhub.lazz.tech
    http:
      paths:
      - backend:
          serviceName: stage-lazztechhub-service
          servicePort: 80
